[metadata]
name = netsec-test
author = Rackspace
author-email = onmetal@lists.rackspace.com
summary = OnMetal script
license = Apache-2
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    netsec_test

[pbr]
autodoc_index_modules = True

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[wheel]
universal = 1
